--- a/Wpf.DemoApp/MainWindow.xaml
+++ b/Wpf.DemoApp/MainWindow.xaml
@@ -2,8 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:converters="clr-namespace:StkCommon.UI.Wpf.Converters;assembly=StkCommon.UI.Wpf"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:demoApp="clr-namespace:StkCommon.UI.Wpf.DemoApp"
 		WindowStartupLocation="CenterScreen"
 		SizeToContent="Width"
+		mc:Ignorable="d"
+		d:DataContext="{d:DesignInstance Type=demoApp:MainWindowViewModel, IsDesignTimeCreatable=True}"
         Title="MainWindow" Height="350" Background="#fff2f2f2">
     <Window.Resources>
         <ResourceDictionary>
@@ -13,7 +18,12 @@
             <converters:EmptyStringToVisibilityConverter x:Key="StringToVisibilityConverter" EmptyString="Collapsed" NotEmptyString="Visible" IsCheckWhiteSpace="True" />
             <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" NullValue="Collapsed" NotNullValue="Visible"/>
             <converters:EqualParameterToVisibilityConverter x:Key="EqualParameterToVisibilityConverter" Equal="Visible" NotEqual="Collapsed"/>
-        </ResourceDictionary>
+			
+			<converters:SwitchConverter x:Key="SwitchConverter" Default="Default">
+				<converters:SwitchConverterCase When="1" Then="Then1" />
+				<converters:SwitchConverterCase When="2" Then="Then2" />
+			</converters:SwitchConverter>
+		</ResourceDictionary>
     </Window.Resources>
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
@@ -22,6 +32,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal" Margin="12">
@@ -38,9 +49,8 @@
         </StackPanel>
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="6">
-            <Button Content="Примеры StkCommon.UI.Wpf.Theme" Margin="4" Padding="3" HorizontalAlignment="Left" VerticalAlignment="Top" Click="ShowStkCommonUiWpfTheme"/>
-       
-        </StackPanel>
+			<Button Content="Примеры StkCommon.UI.Wpf.Theme" Margin="4" Padding="3" HorizontalAlignment="Left" VerticalAlignment="Top" Click="ShowStkCommonUiWpfTheme"/>
+		</StackPanel>
         <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="6">
             <Button Content="Примеры StkCommon.UI.Wpf.View.Controls" Margin="4" Padding="3" HorizontalAlignment="Left" VerticalAlignment="Top" Click="ShowControlsWindow"/>
         </StackPanel>
@@ -48,5 +58,10 @@
         <StackPanel Grid.Row="4" Orientation="Horizontal" Margin="6">
 			<Button Content="Примеры ErrorMessageWindow" Margin="4" Padding="3" HorizontalAlignment="Left" VerticalAlignment="Top" Click="ShowErrorMessageWindow"/>
 		</StackPanel>
-    </Grid>
+
+		<StackPanel Grid.Row="5" Orientation="Vertical" Margin="6">
+			<TextBlock Text="{Binding SwitchTestProperty2, Converter={StaticResource SwitchConverter}, StringFormat='SwitchConvert SwitchTestProperty2 = {0}'}"/>
+			<TextBlock Text="{Binding SwitchTestProperty3, Converter={StaticResource SwitchConverter}, StringFormat='SwitchConvert SwitchTestProperty3 = {0}'}"/>
+		</StackPanel>
+	</Grid>
 </Window>
