--- a/StkCommon.UI.Wpf/Views/Windows/AboutWindow.xaml
+++ b/StkCommon.UI.Wpf/Views/Windows/AboutWindow.xaml
@@ -13,6 +13,7 @@
 		SizeToContent="WidthAndHeight" 
 		ResizeMode="NoResize" 
 		WindowStartupLocation="CenterOwner"
+		AutomationProperties.AutomationId="AboutWindow"
 		MinWidth="350"
 		MinHeight="300"
 		d:DataContext="{d:DesignInstance Type=designTime:DesignMockAboutViewModel, IsDesignTimeCreatable=True}">
